/**
	protoc.exe --java_out=./ Examples.proto
*/
option java_package = "com.tracker.coprocessor.generated";
option java_outer_classname = "RowCountProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

import "Client.proto";

message CountRequest {
   required Scan scan = 1;
}

message CountResponse {
  required int64 count = 1 [default = 0];
}

service RowCountService {
  rpc getRowCount(CountRequest)
    returns (CountResponse);
}